--- a/layers.qmd
+++ b/layers.qmd
@@ -7,9 +7,13 @@ editor_options:
 # Layers {#sec-layers}
 
 ```{r}
-#| echo: false
+knitr::opts_chunk$set(warning = FALSE, message = FALSE)
+```
 
-source("_common.R")
+```{r, echo = FALSE}
+library(tidyverse)
+library(ggplot2)
+library(palmerpenguins)
 ```
 
 ## Introduction
@@ -940,16 +944,14 @@ To learn more about a position adjustment, look up the help page associated with
 
 We can expand on the graphing template you learned in @sec-ggplot2-calls by adding position adjustments, stats, coordinate systems, and faceting:
 
-```         
-ggplot(data = <DATA>) + 
-  <GEOM_FUNCTION>(
-     mapping = aes(<MAPPINGS>),
-     stat = <STAT>, 
-     position = <POSITION>
-  ) +
-  <COORDINATE_FUNCTION> +
-  <FACET_FUNCTION>
-```
+    ggplot(data = <DATA>) + 
+      <GEOM_FUNCTION>(
+         mapping = aes(<MAPPINGS>),
+         stat = <STAT>, 
+         position = <POSITION>
+      ) +
+      <COORDINATE_FUNCTION> +
+      <FACET_FUNCTION>
 
 Our new template takes seven parameters, the bracketed words that appear in the template.
 In practice, you rarely need to supply all seven parameters to make a graph because ggplot2 will provide useful defaults for everything except the data, the mappings, and the geom function.
